<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShiftTracker</string>
    <string name="title_activity_bienvenida">Bienvenida</string>
    <string name="titulo_bienvenido">Bienvenido</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="soy_administrador">Soy administrador</string>
    <string name="soy_empleadoAlumno">Soy empleado/alumno</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="nombre_de_grupo">Nombre de grupo</string>
    <string name="descripcion_del_grupo">Descripción del grupo</string>
    <string name="email">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="contrasena">Contraseña</string>
    <string name="cargo">Cargo</string>
    <string name="sin_cargo">Sin cargo</string>
    <string name="registrar_etiqueta">Vincular/desvincular etiqueta</string>
    <string name="listado_grupos">Mis grupos</string>
    <string name="listado_grupos_vacio">Sin grupos</string>
    <string name="listado_miembros">Miembros</string>
    <string name="listado_miembros_vacio">Sin miembros</string>
    <string name="calendario">Calendario</string>
    <string name="asistencia">Asistencia</string>
    <string name="vacaciones">Vacaciones</string>
    <string name="festivo">Festivo</string>
    <string name="nuevo_grupo">Nuevo grupo</string>
    <string name="eliminar_grupo">Eliminar grupo</string>
    <string name="nuevo_miembro">Nuevo miembro</string>
    <string name="eliminar_miembro">Eliminar miembro</string>
    <string name="nuevo_festivo">Nuevo festivo</string>
    <string name="cambiar_nombre_usuario">Cambiar nombre de usuario</string>
    <string name="cambiar_cargo">Cambiar cargo</string>
    <string name="cambiar_nombre_grupo">Cambiar nombre de grupo</string>
    <string name="cambiar_descripcion_grupo">Cambiar descripción de grupo</string>
    <string name="ver_miembros">Ver miembros</string>
    <string name="ver_calendario">Ver calendario</string>
    <string name="anadir_vacaciones">Añadir vacaciones</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="listado_notificaciones_vacio">Sin notificaciones</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="acerca_etiqueta">Acerca la etiqueta al lector NFC</string>
    <string name="vincular_etiqueta">Vincular etiqueta</string>
    <string name="vaciar_etiqueta">Eliminar etiqueta</string>
    <string name="horario">Horario</string>
    <string name="nueva_asistencia">Nueva asistencia</string>
    <string name="esta_presente">Está presente</string>
    <string name="no_esta_presente">No está presente</string>
    <string name="no_tiene_nfc">El dispositivo no soporta la tecnología NFC</string>
    <string name="activar_nfc">Activa la tecnología NFC</string>
    <string name="notificacion_nueva_asistencia_titulo">Nueva asistencia</string>
    <string name="notificacion_nueva_asistencia">: nueva asistencia de \u0020</string>
    <string name="lun">Lun</string>
    <string name="mar">Mar</string>
    <string name="mie">Mie</string>
    <string name="jue">Jue</string>
    <string name="vie">Vie</string>
    <string name="sab">Sab</string>
    <string name="dom">Dom</string>
    <string name="inicio">Inicio</string>
    <string name="fin">Fin</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>


    <!--Mensajes toast-->
    <string name="error">Se ha producido un error.</string>
    <string name="error_conexion">No se ha podido conectar con el servidor.</string>
    <string name="error_tiempo_espera_agotado">Error! Tiempo de respuesta del servidor agotado.</string>

    <string name="error_nombre_usuario">El nombre de usuario debe tener entre 3 y 16 carácteres.</string>
    <string name="error_cargo">El cargo debe tener entre 1 y 24 carácteres.</string>
    <string name="error_email">El formato de correo electrónico no es válido.</string>
    <string name="error_telefono">El formato de teléfono no es válido.</string>
    <string name="error_contrasena">La contraseña debe tener mínimo 8 caráctertes, no contener espacios y contener una letra y un número.</string>
    <string name="error_nombre_grupo">El nombre de grupo debe tener entre 1 y 16 carácteres.</string>
    <string name="error_descripcion">La descripción debe tener entre 1 y 24 carácteres.</string>

    <string name="error_ya_existe_usuario">Ya existe un usuario con alguno de los datos escritos.</string>
    <string name="error_nombre_usuario_ya_existe">Ya existe un usuario con ese nombre</string>
    <string name="error_datos_incorrectos">Los datos son incorrectos.</string>
    <string name="error_no_existe_usuario">Error! Usuario no encontrado.</string>
    <string name="error_ya_existe_usuario_en_grupo">El usuario ya existe en el grupo.</string>
    <string name="error_usuario_administrador">Error! El usuario es administrador.</string>
    <string name="error_no_modificar_administrador">No se puede modificar el administrador.</string>
    <string name="error_no_existe_grupo">Error! Grupo no encontrado.</string>
    <string name="error_no_existe_festivo">Error! Festivos no encontrados.</string>
    <string name="error_cargar_calendario">Error al cargar el calendario.</string>
    <string name="error_etiqueta_no_configurada">Error! La etiqueta NFC no corresponde al grupo.</string>
    <string name="error_formato_fecha_hora">Error con el formato de fecha y hora.</string>
    <string name="error_periodo_solapado">El periodo se solapa con otro ya existente.</string>
    <string name="error_fecha_inicio_antes_que_fin">La fecha de inicio no puede ser anterior a la de fin.</string>

    <string name="exito_registro">Registro correcto.</string>
    <string name="exito_nombre_usuario_editado">Nombre de usuario editado.</string>
    <string name="exito_miembro_eliminado">Miembro eliminado.</string>
    <string name="exito_cargo_editado">Cargo editado.</string>
    <string name="exito_nombre_grupo_editado">Nombre de grupo editado.</string>
    <string name="exito_descripcion_grupo_editado">Descripción de grupo editado.</string>
    <string name="exito_grupo_creado">Grupo creado.</string>
    <string name="exito_grupo_eliminado">Grupo eliminado.</string>
    <string name="exito_miembro_anadido">Miembro añadido.</string>
    <string name="exito_asistencia_anadida">Nueva asistencia añadida.</string>
    <string name="exito_vacaciones_anadidas">Periodo vacacional añadido.</string>
    <string name="exito_festivo_anadido">Periodo festivo añadido.</string>
</resources>