<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actRegistrarseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_fondo"
    tools:context=".login.Registrarse">

    <TextView
        android:id="@+id/actRegistrarseTextViewRegistrarse"
        style="@style/titulo_blanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/registrarse"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/actRegistrarseTextInputLayoutUsuario"
        style="@style/TextInputLayoutBlancoTextoAzul"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/nombre_de_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actRegistrarseTextViewRegistrarse">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/actRegistrarseTextInputEditTextUsuario"
            style="@style/TextInputEditTextBlancoTextoAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/days_one"
            android:inputType="text"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/actRegistrarseTextInputLayoutEmail"
        style="@style/TextInputLayoutBlancoTextoAzul"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actRegistrarseTextInputLayoutUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/actRegistrarseTextInputEditTextEmail"
            style="@style/TextInputEditTextBlancoTextoAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/days_one"
            android:inputType="text|textEmailAddress"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/actRegistrarseTextInputLayoutTelefono"
        style="@style/TextInputLayoutBlancoTextoAzul"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actRegistrarseTextInputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/actRegistrarseTextInputEditTextTelefono"
            style="@style/TextInputEditTextBlancoTextoAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/days_one"
            android:inputType="phone"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/actRegistrarseTextInputLayoutContrasena"
        style="@style/TextInputLayoutBlancoTextoAzul"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actRegistrarseTextInputLayoutTelefono">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/actRegistrarseTextInputEditTextContrasena"
            style="@style/TextInputEditTextBlancoTextoAzul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/days_one"
            android:inputType="text|textPassword"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/actRegistrarseRadioGroupTipoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actRegistrarseTextInputLayoutContrasena">

        <RadioButton
            android:id="@+id/actRegistrarseRadioButtonEmpleadoAlumno"
            style="@style/radioButton_checked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/soy_empleadoAlumno"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/actRegistrarseRadioButtonAdministrador"
            style="@style/radioButton_unchecked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soy_administrador"
            android:textAlignment="center" />

    </RadioGroup>

    <Button
        android:id="@+id/actRegistrarseButtonRegistrarse"
        style="@style/boton_blanco"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lexend_medium"
        android:onClick="onClickRegistrarse"
        android:text="@string/registrarse"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actRegistrarseRadioGroupTipoUsuario" />
</androidx.constraintlayout.widget.ConstraintLayout>