<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actBienvenidaLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_fondo"
    tools:context=".login.Bienvenida">

    <TextView
        android:id="@+id/actBienvenidaTextViewBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:theme="@style/titulo_blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actBienvenidaImageViewLogo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/actBienvenidaButtonIniciarSesion"
        style="@style/boton_blanco"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/lexend_medium"
        android:onClick="onClickIniciarSesion"
        android:text="@string/iniciar_sesion"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actBienvenidaTextViewBienvenida" />

    <Button
        android:id="@+id/actBienvenidaButtonRegistrarse"
        style="@style/boton_blanco"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lexend_medium"
        android:onClick="onClickRegistrarse"
        android:text="@string/registrarse"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actBienvenidaButtonIniciarSesion" />

    <ImageView
        android:id="@+id/actBienvenidaImageViewLogo"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo_shifttracker" />

</androidx.constraintlayout.widget.ConstraintLayout>